
- Changed tidyNode class to disallow manual node creation. (Pierrick)

- Added missing host validation for HTTP urls inside FILTER_VALIDATE_URL.
  (Ilia)

- Improved LCG entropy. (Rasmus, Samy Kamkar)

- Fixed bug in bundled libgd causing spurious horizontal lines drawn by 
  gdImageFilledPolygon (libgd #100). (Takeshi Abe)
- Fixed build of mysqli with MySQL 5.5.0-m2. (Andrey)

- Fixed bug #50823 (ReflectionFunction::isDeprecated producing "cannot be called
  statically" error). (Jani, Felipe)
- Fixed bug #50791 (Compile failure: Bad logic in defining fopencookie
  emulation). (Jani)
- Fixed bug #50787 (stream_set_write_buffer() has no effect on socket
  streams). (vnegrier at optilian dot com, Ilia)
- Fixed bug #50772 (mysqli constructor without parameters does not return a
  working mysqli object). (Andrey)
- Fixed bug #50761 (system.multiCall crashes in xmlrpc extension). (hiroaki
  dot kawai at gmail dot com, Ilia)
- Fixed bug #50732 (exec() adds single byte twice to $output array). (Ilia)
- Fixed bug #50728 (All PDOExceptions hardcode 'code' property to 0). (Joey,
  Ilia)
- Fixed bug #50680 (strtotime() does not support eighth ordinal number).
  (Ilia)
- Fixed bug #50661 (DOMDocument::loadXML does not allow UTF-16). (Rob)
- Fixed bug #50657 (copy() with an empty (zero-byte) HTTP source succeeds but
  returns false). (Ilia)
- Fixed bug #50636 (MySQLi_Result sets values before calling constructor).
  (Pierrick)
- Fixed bug #50632 (filter_input() does not return default value if the
  variable does not exist). (Ilia)
- Fixed bug #50576 (XML_OPTION_SKIP_TAGSTART option has no effect). (Pierrick)
- Fixed bug #50575 (PDO_PGSQL LOBs are not compatible with PostgreSQL 8.5).
  (Matteo)
- Fixed bug #50558 (Broken object model when extending tidy). (Pierrick)
- Fixed bug #50540 (Crash while running ldap_next_reference test cases).
  (Sriram)
- Fixed bug #50508 (compile failure: Conflicting HEADER type declarations).
  (Jani)